vlib/v/checker/tests/import_symbol_fn_err.out
vlib/v/checker/tests/import_symbol_fn_err.vv:1:8: warning: module 'crypto' is imported but never used. Use `import crypto as _`, to silence this warning, or just remove the unused import line
    1 | import crypto { userper }
      |        ~~~~~~
    2 | fn main() {
    3 |   usurper()
vlib/v/checker/tests/import_symbol_fn_err.vv:1:17: error: module `crypto` has no constant or function `userper`
    1 | import crypto { userper }
      |                 ~~~~~~~
    2 | fn main() {
    3 |   usurper()
vlib/v/checker/tests/import_symbol_fn_err.vv:3:3: error: unknown function: usurper
    1 | import crypto { userper }
    2 | fn main() {
    3 |   usurper()
      |   ~~~~~~~~~
    4 | }
