vlib/v/checker/tests/import_symbol_fn_err.vv
import crypto { userper }
fn main() {
  usurper()
}
